hphp/test/slow/readonly/inout_readonly_assign.php
<?hh
class Foo {}
function foo(
  inout Foo $x
): void {
  $x = readonly new Foo(); // error
}
